--- a/hello.html
+++ b/hello.html
@@ -7,5 +7,6 @@
         Hello, world!
         Added line
         <h1>Change 2 made</h1>
+        <h2>Added by Edit in GitHub UI</h2>
     </body>
 </html>
